 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.5:

 - [ZBX-292] fixed negative values in availability report issue (Artem)
 - [ZBX-182] fixed processing of icmpping if dns name cannot be resolved (Sasha)
 - [HAN-2] improved speed on coping triggers to host (Artem)
 - [ZBX-290] fixed possible server crash if host dns name is unknown (Sasha)
 - [ZBX-288] fixed compilation of the agent under Solaris 2.6 (Alexei)
 - [ZBX-287] fixed compilation under FreeBSD 4.1 with older GCC (Alexei)
 - [ZBX-283] fixed SQL statement where INTEGER exceeds allowed range (Artem)
 - [ZBX-277] fixed possible server crash when evaluating functions str(), regexp() and iregexp() (Alexei)
 - [ZBX-271] added support of system.boottime[] for OpenBSD & FreeBSD agents (Sasha)
 - [ZBX-268] added support of proc.num[], proc.mem[] & system.cpu.num[] for OpenBSD agents (Sasha)
 - [ZBX-263] fixed problem with saving of lastlogsize for log[] and eventlog[] items when history is set to 0 (Sasha)
 - [ZBX-253] fixes problem in frontend with long int values (Artem)
 - [ZBX-250] speed improvement for Triggers when use "{ITEM.VALUE}" macro (Sasha)
 - [ZBX-250] 100% CPU on server side after connection loss (Sasha)
 - [ZBX-246] fixed header error in Monitoring->slideshows (Artem)
 - [ZBX-243] speed improvement for windows agent for eventlog[] processing (Sasha)
 - [DEV-92] added supprt of multiple windows agents, service description (Sasha)
 - [ZBX-7] added support of system.cpu.util[] for FreeBSD agents, thanks to 'brick' (Sasha)
 - [ZBX-222] fixed problem with slashes (Artem)
 - [ZBX-210] added support of system.cpu.num[] for FreeBSD agents, thanks to 'freak' (Sasha)

Changes for 1.4.4:
